tests/script/negative/typecheck/seq-if.s
@initial
m() {
  if (x = 1; true)
    { x = 2 }
}
